--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@
 
 .App-header {
   background-color: #0099FF;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,8 +43,18 @@
 ul.NavButton {
   padding-left:0px;
   text-align: center;
+  background-color: #0099FF;
 }
 ul.NavButton > li{
   display: inline-block;
   padding: 10px 20px;
+}
+.Contact {
+  background-color: darkslategray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
