Ok let's try this for real this time

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: darkslategray;
+.logo{
+  width: 128px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root
+{
+  background-color: #f2f2f2;
+}
+.Header
+{
+  background-color: #0099FF;
+  color: #fff;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.Header ul
+{
+  display:flex;
+  list-style: none;
+}
+.Header li
+{
+  padding: 10px;
 }
