--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 {
   background-color: #f2f2f2;
 }
-.Header
+.Header nav
 {
   background-color: #0099FF;
   color: #fff;
@@ -17,6 +17,7 @@
 {
   display:flex;
   list-style: none;
+  padding: 0;
 }
 .Header li
 {
